--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 .App {
   text-align: center;
+  background-color: #ffffffff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-
 .App-header {
+  min-width: 100%;
   background-color: #282c34;
   min-height: 10vh;
   display: flex;
