--- a/src/SnakeBoard.css
+++ b/src/SnakeBoard.css
@@ -1,4 +1,5 @@
 .Snake-board {
+  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
@@ -10,6 +11,15 @@
 .Snake-row {
   display: flex;
   flex-direction: row;
+}
+
+.Game-over {
+  position: absolute;
+  color: red;
+  font-weight: bold;
+  background: black;
+  padding: 10px;
+  font-size: 45px;
 }
 
 .tile {
