--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,13 @@
   font-size: calc(20px + 2vmin);
   color: white;
 }
+
+button {
+  color: white;
+  background-color: purple;
+  padding: 10px;
+  border-radius: 20px;
+  border: 0;
+  text-transform: uppercase;
+  font-weight: bold;
+}
